refactors, email tokens, authenticate handler
