# cmd/api/comments.go
@@ -10,6 +10,20 @@ type CommentPayload struct {
 	Content string `json:"content" validate:"required"`
 }
 
+// CreateComment godoc
+//
+//	@Summary		Create a comment
+//	@Description	Create a comment by ID
+//	@Tags			posts, comments
+//	@Accept			json
+//	@Produce		json
+//	@Param			id		path		int				true	"Post ID"
+//	@Param			payload	body		CommentPayload	true	"Comment payload"
+//	@Success		200		{object}	store.Comment	"Comment created"
+//	@Failure		400		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/posts/{id}/comments [post]
 func (app *application) createCommentHandler(w http.ResponseWriter, r *http.Request) {
 	var payload CommentPayload
 
@@ -27,14 +41,14 @@ func (app *application) createCommentHandler(w http.ResponseWriter, r *http.Requ
 
 	comment := &store.Comment{
 		Content: payload.Content,
+		PostID:  post.ID,
 		//change after auth
-		PostID: post.ID,
 		UserID: 2,
 	}
 
 	ctx := r.Context()
 	if err := app.storage.Comments.Create(ctx, comment); err != nil {
-		app.badRequestError(w, r, err)
+		app.internalServerError(w, r, err)
 		return
 	}
 
