# cmd/api/users.go
@@ -129,7 +129,7 @@ func (app *application) userContextMiddleware(next http.Handler) http.Handler {
 		if err != nil {
 			switch {
 			case errors.Is(err, store.ErrNotFound):
-				app.notFoundErrorResponse(w, r, err)
+				app.userNotFoundErrorResponse(w, r, err)
 			default:
 				app.internalServerError(w, r, err)
 			}
@@ -143,4 +143,35 @@ func (app *application) userContextMiddleware(next http.Handler) http.Handler {
 func getUserFromCtx(r *http.Request) *store.User {
 	user, _ := r.Context().Value(userCtxKey).(*store.User)
 	return user
+}
+
+// ActivateUser godoc
+//
+//	@Summary		Activates/Register a user
+//	@Description	Activates/Register a user by invitation token
+//	@Tags			users
+//	@Produce		json
+//	@Param			token	path		string	true	"Invitation token"
+//	@Success		204		{string}	string	"User activated"
+//	@Failure		404		{object}	error
+//	@Failure		500		{object}	error
+//	@Security		ApiKeyAuth
+//	@Router			/users/activate/{token} [put]
+func (app *application) activateUserHandler(w http.ResponseWriter, r *http.Request) {
+	token := chi.URLParam(r, "token")
+	app.l.Infof("Token", token)
+	err := app.storage.Users.Activate(r.Context(), token)
+	if err != nil {
+		switch err {
+		case store.ErrNotFound:
+			app.userNotFoundErrorResponse(w, r, err)
+		default:
+			app.internalServerError(w, r, err)
+		}
+		return
+	}
+
+	if err := app.jsonResponse(w, http.StatusNoContent, ""); err != nil {
+		app.internalServerError(w, r, err)
+	}
 }
